ローカルで文字起こしも一応できるように